5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1667_2974.log
== TEST (2019-04-16 16:32:37) 
-- CODE:
x = int(input("quantidade de acai: "))
y = int(input("quantidade de salgados: "))
z = float(input("valor: "))

if (z == 1):
	mensagem = sim
	
else (z == 2):
	mensagem = nao
	
print(round(2,x,y))
-- ERROR:
File "XXXX", line 8
    else (z == 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:49) 
-- CODE:
x = int(input("quantidade de acai: "))
y = int(input("quantidade de salgados: "))
z = float(input("valor: "))

if(z == 1):
	mensagem = sim
	
else(z == 2):
	mensagem = nao
	
print(round(2,x,y))
-- ERROR:
File "XXXX", line 8
    else(z == 2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:59) 
-- CODE:
x = int(input("quantidade de acai: "))
y = int(input("quantidade de salgados: "))
z = float(input("valor: "))

if(z == 1):
	mensagem = sim
	
else:
	mensagem = nao
	
print(round(2,x,y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:16) 
-- CODE:
x = int(input("quantidade de acai: "))
y = int(input("quantidade de salgados: "))
z = float(input("valor: "))

if(z == 1):
	mensagem = x*y=z
	mensagem = sim
	
else:
	mensagem = nao
	
print(round(2,x,y))
-- ERROR:
File "XXXX", line 6
    mensagem = x*y=z
              ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:31) 
-- CODE:
x = int(input("quantidade de acai: "))
y = int(input("quantidade de salgados: "))
z = float(input("valor: "))

if(z == 1):
	mensagem = (x*y=z)
	mensagem = sim
	
else:
	mensagem = nao
	
print(round(2,x,y))
-- ERROR:
File "XXXX", line 6
    mensagem = (x*y=z)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:27) 
-- CODE:
x = int(input("quantidade de acai: "))
y = int(input("quantidade de salgados: "))
z = float(input("valor: "))

if (x*y==z)
	mensagem = sim
	
else:
	mensagem = nao
	
print(round(2,x,y))
-- ERROR:
File "XXXX", line 5
    if (x*y==z)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:40) 
-- CODE:
x = int(input("quantidade de acai: "))
y = int(input("quantidade de salgados: "))
z = float(input("valor: "))

if (x*y == z):
	mensagem = sim
	
else:
	mensagem = nao
	
print(round(2,x,y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
